# PromptingNemo

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  Ravdess_tts_speechT5.ipynb  annotate_hf.ipynb  dev-clean-wav.json  docker-compose.yml  process_cv.py  process_libre.ipynb  process_libre.py  process_slurp.ipynb  process_slurp.py  pyproject.toml  requirements.txt  run.ipynb  run_create_tts.sh  run_xse.sh  soccer_model_finetuning.ipynb  train-clean-360-wav.json  wellness_model_finetuning.ipynb
CrossStichedEnocders/: dummy.py  xse_ctc.py
CrossStichedEnocders/OneStepSpeechInstructor/: events.out.tfevents.1700185706.51481f181d16.1672293.0  lightning_logs.txt  nemo_error_log.txt  nemo_log_globalrank-0_localrank-0.txt
CrossStichedEnocders/OneStepSpeechIntructor/: nemo_error_log.txt  nemo_log_globalrank-0_localrank-0.txt
CrossStichedEnocders/conf/: prompt_conformer_ctc_bpe.yaml  punctuation_capitalization_lexical_audio_config.yaml
CrossStichedEnocders/models/: lexical_audio_ctc_model.py
applications/bash-bot/: README.md  app.py  music_system.sh  setup.py
applications/iot-assistant/: README.md  assistant.py  assistant.spec  config.yml  document_embedding.py  find_database.py  pico_text.py  rci_prompt.py  requirements.txt  text_to_speech.py  token_cache.txt
applications/mt/: mt_nemo_export.py
applications/summarization/: README.md  app.py  requirements.txt  video_summarization.py
applications/tts/: bark.py  run_bark.py
applications/twilio/: app.py  call.py  config.yml  fetch.py  requirements.txt
applications/voicebot/: .env.example  Dockerfile  README.md  app.py  config.yml  onnx_client_fastapi.py  (+4 more)
applications/voicebot-riva/: riva_client_flask.py
docker/: Dockerfile.dev  Dockerfile.inference  Dockerfile.nemo-w  Dockerfile.training
docs/: architecture.md  audio_visual.md  ecosystem.md  tag_schema.md  training_guide.md
examples/: README.md
exploratory/: soccer_model_finetuning.ipynb
models/: lexical_audio_ctc_model.py
nemo_env/: pyvenv.cfg
promptingnemo/: README.md  __init__.py
recipes/: README.md  __init__.py
scripts/: zh_download_audio.py
tests/: conftest.py  test_cli.py  test_decoder.py  test_eval.py  test_imports.py  test_normalize.py  test_tag_parser.py  test_text_ctc_model.py  test_tokenizer_config.py
(+826 files in other folders)
