[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptingnemo"
version = "0.2.0"
description = "Speech-2-Action: train ASR models that transcribe and tag in a single pass"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "WhissleAI", email = "info@whissle.ai" },
]
keywords = ["asr", "speech", "nemo", "speech-tagging", "meta-asr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "omegaconf>=2.3",
    "pyyaml>=6.0",
    "sentencepiece>=0.1.99",
    "jiwer>=3.0",
    "editdistance>=0.6",
    "soundfile>=0.12",
    "librosa>=0.10",
    "datasets>=3.0,<4.0",
    "huggingface_hub>=0.20",
    "rich>=13.0",
]

[project.optional-dependencies]
train = [
    "nemo_toolkit[asr]>=2.7",
    "torchaudio>=2.0",
    "tensorboard>=2.14",
]
export = [
    "onnxruntime>=1.16",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]
all = ["promptingnemo[train,export,dev]"]

[project.scripts]
promptingnemo = "promptingnemo.training.cli:main"

[project.urls]
Homepage = "https://github.com/WhissleAI/PromptingNemo"
Documentation = "https://github.com/WhissleAI/PromptingNemo/tree/main/docs"
Repository = "https://github.com/WhissleAI/PromptingNemo"
Issues = "https://github.com/WhissleAI/PromptingNemo/issues"
"HuggingFace Models" = "https://huggingface.co/WhissleAI"

[tool.hatch.build.targets.wheel]
packages = ["promptingnemo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require GPU or large models",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
